<resources>
    <string name="app_name">My Story App</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="isRegister">Don\'t have an Account yet?</string>
    <string name="isLogin">Have an Account?</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="hint_email_login">Email</string>
    <string name="hint_password_login">Password</string>
    <string name="hint_email_register">Enter Your Email</string>
    <string name="hint_name_register">Enter Your Name</string>
    <string name="hint_password_register">Enter Your Password</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_password">Password less than 8 characters</string>
    <string name="check_validity_field">Check your field</string>
    <string name="dashboard">Main</string>
    <string name="menu">Menu</string>
    <string name="open_menu">Open</string>
    <string name="no_data">There is no data</string>
    <string name="close_menu">Close</string>
    <string name="posting">Upload</string>
    <string name="story_username">Username User</string>
    <string name="story_description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="success_register">Successfully Created Account</string>
    <string name="error_register">Failed to Create Account</string>
    <string name="error_register_by_email">Failed to Create Account: Email Already Registered</string>
    <string name="error_login">Failed to Log In</string>
    <string name="error_login_by_password">Invalid Password</string>
    <string name="error_login_user_not_found">Invalid Email/Password</string>
    <string name="error_by_invalid_email">Invalid Email Format</string>
    <string name="error_by_empty_name">Email cannot be empty</string>
    <string name="error_by_empty_email">Email cannot be empty</string>
    <string name="error_by_empty_password">Password cannot be empty</string>
    <string name="success_create_story">Story Created Successfully!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="image_card_story">Image List Story</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_detail_story">Photo Post</string>
    <string name="blank_description_create_story">Please enter your description first</string>
    <string name="blank_image_create_story">Picture should not be empty</string>
    <string name="try_again">Try Again</string>
    <string name="location">Location</string>
    <string name="current_location">My Current Location</string>
    <string name="invalid_location">Location Not Found, Enable Location First!</string>
    <string name="isLocationEnabled">Enable Location: </string>
    <string name="story_location_title">Location: </string>
    <string name="story_location_user">User Location</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="is_location_enable">Please Enable Location</string>
    <string name="title_activity_gmaps">Google Maps</string>
    <string name="sym_app">Symbol App</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="fab">Floating button posting</string>
    <string name="time_out">Timeout</string>
    <string name="about_detail">Est 2023 by Deden Fadhli</string>
</resources>