<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item android:title="@string/dashboard">
            <menu>
                <item
                    android:id="@+id/action_home"
                    android:title="@string/home"/>
                <item
                    android:id="@+id/action_location"
                    android:title="@string/location"/>
            </menu>
        </item>
    </group>

    <group>
        <item android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/action_about"
                    android:title="@string/about"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_logout"
            android:title="@string/logout"/>
    </group>

</menu>