<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NavHostFragment"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.story.PostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_post_preview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/borderline"
            android:contentDescription="@string/image_preview"
            android:src="@drawable/ic_baseline_add_photo_alternate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayoutPost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:stretchColumns="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post_preview">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:minHeight="50dp"
                    android:text="@string/camera"
                    tools:ignore="ButtonStyle,VisualLintButtonSize" />

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:minHeight="50dp"
                    android:text="@string/gallery"
                    tools:ignore="ButtonStyle,VisualLintButtonSize" />

            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/ed_post_desc"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Description"
            android:background="@drawable/borderline"
            android:gravity="top|start"
            android:hint="@string/story_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayoutPost"
            tools:ignore="VisualLintTextFieldSize" />

        <TableLayout
            android:id="@+id/tableLayoutLoc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:stretchColumns="0"
            app:layout_constraintTop_toBottomOf="@id/ed_post_desc"
            app:layout_constraintBottom_toTopOf="@id/btn_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isLocationEnabled"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_loc_enable" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:minHeight="50dp"
            android:text="@string/posting"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/ed_post_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>